--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.content {
+  margin-left: 125px; /* 사이드바 너비만큼 마진 추가 */
+  padding: 20px;
+  flex: 1;
+  background-color: #ffffff;
+  height: calc(100vh - 60px);
+  overflow-y: auto;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +45,5 @@
     transform: rotate(360deg);
   }
 }
+
+
